source/stylesheets/style.css.less
@import "bootstrap.less";

// Navigation
.navbar {
	margin-bottom: 0;
	border-bottom: 1px solid @gray;

	.navbar-inner {
		background-image: none;
	}

	.nav > li > a {
		border-top: 5px solid transparent;
	}

	.nav > li > a:hover,
	.nav > .active > a,
	.nav > .active > a:hover {
		border-top: 5px solid @yellow;
	}
}


// Banner, ad, and quote
#banner {
	background: @grayDark url(../images/goban.png) top left no-repeat;
	border-bottom: 1px solid @gray;
	margin-bottom: 20px;

	@media (max-width: 1100px) {
		background-position: top center;
	}

	#ad {
		color: @white;
		height: 150px;
		font-size: 24px;
		line-height: 50px;
		text-shadow: 2px 2px 2px @black;
	}

	#quote {
		padding: 10px 0px;

		blockquote {
			border-left: 0;
			p { text-indent: -.4em; }
			cite { font-style: italic; }
		}
	}
}


// General stuff

h1, h2, h3, h4, h5, h6 {
	text-shadow: 1px 1px 1px @black;
}

ul {
	list-style-type: square;
}

table {
	th.center, td.center {
		text-align: center;
	}

	th.default, td.default {
		background-color: @grayDark;
		border-color: @grayDarker;
		font-weight: bold;
	}
}


// Footer
html,
body {
	height: 100%;
}

#wrap {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -60px;
}

#push {
	margin-top: 20px;
	height: 60px;
}

footer {
	background-color: @grayDark;
	border-top: 1px solid @gray;
	color: darken(@textColor, 20%);
	padding: 17px;

	p { margin: 0; }
	a { color: darken(@yellow, 20%); }
}

